# tinycrypt

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/tinycrypt/: ecc_platform_specific.h
lib/source/: ecc_platform_specific.c  utils.c
tests/: CMakeLists.txt  test_ecc_utils.c
